# app/Http/Controllers/api/ToolColorCodeController.php
@@ -1,15 +1,39 @@
 <?php
 
-namespace App\Http\Controllers;
+namespace App\Http\Controllers\api;
 
+use App\Http\Controllers\Controller;
 use App\Models\ToolColorCode;
 use App\Http\Requests\StoreToolColorCodeRequest;
 use App\Http\Requests\UpdateToolColorCodeRequest;
 
+/**
+ * @OA\Tag(
+ *     name="ToolColorCode",
+ *     description="Everything about tools color code"
+ * )
+ */
 class ToolColorCodeController extends Controller
 {
     /**
      * Display a listing of the resource.
+     * @OA\Get(
+     *   tags={"ToolColorCode"},
+     *   path="/api/tool/color-codes",
+     *   summary="List tool color codes",
+     *   security={{"bearerAuth":{}}},
+     *   @OA\Response(
+     *     response=200,
+     *     description="OK",
+     *     @OA\MediaType(
+     *       mediaType="application/json",
+     *       @OA\Schema(
+     *         type="array",
+     *         @OA\Items(ref="#/components/schemas/ToolColorCode")
+     *       )
+     *     )
+     *   )
+     * )
      */
     public function index()
     {
