# app/Http/Requests/StoreToolProductRequest.php
@@ -9,7 +9,13 @@ use Illuminate\Foundation\Http\FormRequest;
 /**
  * @OA\Schema(
  *     schema="StoreToolProductRequest",
- *     required={"code", "min_cutting_speed", "max_cutting_speed"},
+ *     required={"tool_material_id", "code", "min_cutting_speed", "max_cutting_speed"},
+ *     @OA\Property(
+ *         property="tool_material_id",
+ *         type="integer",
+ *         description="Tool material ID",
+ *         example=1
+ *     ),
  *     @OA\Property(
  *         property="code",
  *         type="string",
@@ -33,15 +39,6 @@ use Illuminate\Foundation\Http\FormRequest;
  *         type="integer",
  *         example=100,
  *         description="Maximum cutting speed (m/min)"
- *     ),
- *     @OA\Property(
- *         property="tool_material_ids",
- *         type="array",
- *         @OA\Items(
- *           type="integer",
- *           example=1,
- *           description="Tool material ID"
- *         )
  *     )
  * )
  */
@@ -63,27 +60,11 @@ class StoreToolProductRequest extends FormRequest
     public function rules(): array
     {
         return [
+            'tool_material_id' => 'required|integer|exists:tool_materials,id',
             'code' => 'required|string|max:255|unique:tool_products,code',
             'name' => 'string|max:255',
             'min_cutting_speed' => 'required|integer|min:0',
-            'max_cutting_speed' => 'required|integer|min:0|gt:min_cutting_speed',
-            'tool_material_ids' => 'array',
-            'tool_material_ids.*' => 'required|integer|exists:tool_materials,id',
+            'max_cutting_speed' => 'required|integer|min:0|gt:min_cutting_speed'
         ];
-    }
-
-
-    /**
-     * Prepare the data for validation.
-     *
-     * @return void
-     */
-    protected function prepareForValidation()
-    {
-        // Convert material_ids to an array if it is a comma-separated string
-        $this->merge([
-            'tool_material_ids' => is_string($this->tool_material_ids) ?
-                explode(',', $this->tool_material_ids) : $this->tool_material_ids ?? [],
-        ]);
     }
 }
